# Nexus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Nexus/: premake5.lua
Nexus/examples/: premake5.lua
Nexus/examples/Sandbox/: main.cpp
Nexus/include/: Nexus.h
Nexus/include/Nexus/: Event.h  Log.h  Window.h
Nexus/include/Nexus/Window/: GLFWWindow.h
Nexus/src/: GLFWWindow.cpp  Log.cpp
Sandbox/: premake5.lua
Sandbox/src/: main.cpp
example/: CMakeLists.txt  main.cpp
examples/: premake5.lua
examples/Sandbox/: main.cpp
include/: Nexus.h
include/Nexus/: Window.h
include/Nexus/Core/: PlatformDetection.h
include/Nexus/Window/: GLFWWindow.h
src/: GLFWWindow.cpp  Log.cpp  Window.cpp
src/Platform/Multi/: GLFWWindow.cpp
